tests/should-fail/higher-order-tv.ls
foo :: (a b -> a c) -> a b -> a c;
foo f x = f x;
